<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XBeat - Video Status Maker</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="crop__pick_error">No image sources available.</string>
    <string name="do_you_want_to_delete_this_video">Do you want to delete this video?</string>
    <string name="downloading_text">Downloading…</string>
    <string name="export">Export</string>
    <string name="latest">Latest</string>
    <string name="leave_edit_page">Want to leave this page?</string>
    <string name="lost_your_internet_connection">It\'s just that you lost your internet connection</string>
    <string name="my_video">My Videos</string>
    <string name="no">No</string>
    <string name="no_data_for_category">Currently no data available for this category…</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="oldest">Oldest</string>
    <string name="oreo_zip_directory">.system_enrmnt_96325_852</string>
    <string name="popular">Popular</string>
    <string name="random">Random</string>
    <string name="search">Search…</string>
    <string name="start_creating">Start Creating</string>
    <string name="try_again">Try Again</string>
    <string name="watermark_image">watermark.png</string>
    <string name="yes">Yes</string>
</resources>