<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layout_scrollFlags="scroll|enterAlways">

            <RelativeLayout
                android:id="@+id/category_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_75sdp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_category_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_video_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_video_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:descendantFocusability="blocksDescendants"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <ProgressBar
                android:id="@+id/progress_video_list"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_centerInParent="true"
                android:theme="@style/AppTheme.PrimaryAccent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:backgroundTint="@color/colorPrimary"
                app:fabSize="auto" />

            <TextView
                android:id="@+id/text_no_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:paddingStart="@dimen/_30sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/no_data_for_category"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layout_try_again"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_200sdp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/oval_bg"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/_25sdp"
                        app:srcCompat="@drawable/not_connected"
                        app:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tv_connection_prob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:gravity="center"
                        android:text="@string/no_internet_connection"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center"
                        android:paddingStart="@dimen/_12sdp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:text="@string/lost_your_internet_connection"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btn_try_again"
                        android:layout_width="@dimen/_125sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginBottom="@dimen/_75sdp"
                        android:background="@drawable/btn_home"
                        android:gravity="center"
                        android:text="@string/try_again"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="@dimen/_25sdp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_start_creating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_200sdp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/oval_bg"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/_50sdp"
                        android:src="@drawable/ic_download"
                        app:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:gravity="center"
                        android:paddingStart="@dimen/_12sdp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:text="Tap the button below to start\nCreate a video"
                        android:textColor="#aaa"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btn_start_creating"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginBottom="@dimen/_75sdp"
                        android:background="@drawable/btn_home"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="@dimen/_25sdp"
                        android:text="@string/start_creating"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>