<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:background="@color/white"
    android:gravity="end"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/layout_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_6sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_8sdp">

        <ImageView
            android:id="@+id/img_random"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/bg_oval_icon"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_shuffle" />

        <TextView
            android:id="@+id/text_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/random"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_6sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_8sdp">

        <ImageView
            android:id="@+id/img_popular"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:background="@drawable/bg_oval_icon"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_flame"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/text_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/popular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_latest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_6sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_8sdp">

        <ImageView
            android:id="@+id/img_latest"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:background="@drawable/bg_oval_icon"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/text_latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/latest"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_oldest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_6sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_8sdp">

        <ImageView
            android:id="@+id/img_oldest"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:background="@drawable/bg_oval_icon"
            android:padding="@dimen/_7sdp"
            app:tint="@color/white"
            android:src="@drawable/ic_leaf" />

        <TextView
            android:id="@+id/text_oldest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/oldest"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>