<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_theme"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ib_back"
            android:layout_width="?actionBarSize"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/my_video"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@drawable/oval_bg_divider"
        app:layout_constraintTop_toBottomOf="@+id/rl_title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_divider">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_video_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_video_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingTop="@dimen/_10sdp" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/progress_video_list"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerInParent="true"
            android:theme="@style/AppTheme.PrimaryAccent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:scaleType="fitXY"
            android:visibility="gone"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="auto" />

        <TextView
            android:id="@+id/text_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingStart="@dimen/_30sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:text="@string/no_data_for_category"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_try_again"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/oval_bg"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_25sdp"
                    app:srcCompat="@drawable/not_connected"
                    app:tint="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tv_connection_prob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:gravity="center"
                    android:text="@string/no_internet_connection"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:text="@string/lost_your_internet_connection"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btn_try_again"
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_75sdp"
                    android:background="@drawable/btn_home"
                    android:gravity="center"
                    android:text="@string/try_again"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_start_creating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/ad_mini_native"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_name"
                    android:paddingHorizontal="@dimen/_25sdp"
                    android:paddingBottom="@dimen/_125sdp"
                    android:src="@drawable/img_no_data" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btn_start_creating"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:gravity="center"
                    android:text="Tap the button below to start\nCreate a video."
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/btn_start_creating"
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:background="@drawable/btn_home"
                    android:gravity="center"
                    android:text="Start Saving"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ad_mini_native"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="bottom"
                android:minHeight="@dimen/_125sdp" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>